Add homebrew formula related to copy/paste
Fix git aliases

Remove the user and host name from the PS1

--- a/bash/config
+++ b/bash/config
@@ -5,7 +5,7 @@ bold=$(tput bold)
 red=$(tput setaf 1)
 reset=$(tput sgr0)
 
-PS1='\u@\[$green\]\h\[$reset\]:\w\[$blue\]$(__git_ps1)\[$reset\] \$ '
+PS1='\w\[$blue\]$(__git_ps1)\[$reset\] \$ '
 
 
 
