Switch tmux back to ctrl-b for now
Add shortcut to switch to last window quickly

Install bash completion

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,14 @@
-set -g prefix C-a
-unbind C-b
+
+# use the default ctrl-b to preserve ctrl-a
+# set -g prefix C-a
+# unbind C-b
+# bind C-a send-prefix
+
 set -sg escape-time 1
 set -g base-index 1 
 
+unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-bind C-a send-prefix
 
 bind | split-window -h
 bind - split-window -v
@@ -68,3 +72,5 @@ set -g status-justify centre
 setw -g monitor-activity on
 set -g visual-activity on
 
+# move to last window quickly
+bind-key C-b last-window
