Make a bigger history limit

--- a/tmux.conf
+++ b/tmux.conf
@@ -74,3 +74,6 @@ set -g visual-activity on
 
 # move to last window quickly
 bind-key C-b last-window
+
+# scrollback buffer size increase
+set -g history-limit 500000
