Add copy and paste shortcuts to tmux windows. Prefix-Esc to enter copy mode.

--- a/tmux.conf
+++ b/tmux.conf
@@ -77,3 +77,11 @@ bind-key C-b last-window
 
 # scrollback buffer size increase
 set -g history-limit 500000
+
+# set up copy and paste from within tmux windows
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
