--- a/tmux.conf
+++ b/tmux.conf
@@ -1,82 +1,86 @@
+# start the numbering from 1
+set -g base-index 1
 
-# use the default ctrl-b to preserve ctrl-a
-# set -g prefix C-a
-# unbind C-b
-# bind C-a send-prefix
-
-set -sg escape-time 1
-set -g base-index 1 
-
-unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-bind | split-window -h
-bind - split-window -v
-
-# act like vim
+set -g status-utf8 on
+ 
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+ 
+#set -g default-terminal screen-256color
+set -g status-keys vi
+set -g history-limit 10000
+ 
 setw -g mode-keys vi
 
+# turn mouse on, this is better for scrolling
+# can still enter "copy mode" with prefix-[ (re-mapped as prefix-Esc) 
+# and then scroll up and down with shift j/k
+setw -g mode-mouse on
+setw -g monitor-activity on
+
+# multiple ways to split a window, either "|" or "v" for vertical, or "-" or "s" for horizontal
+bind-key v split-window -h
+bind-key s split-window -v
+bind | split-window -h
+bind - split-window -v
+ 
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
+ 
+bind-key M-j resize-pane -D
+bind-key M-k resize-pane -U
+bind-key M-h resize-pane -L
+bind-key M-l resize-pane -R
+ 
+# Vim style pane selection
 bind h select-pane -L
-bind j select-pane -D
+bind j select-pane -D 
 bind k select-pane -U
 bind l select-pane -R
+ 
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+ 
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+ 
+# Shift arrow to switch windows
+# (prefix-n works to go to next window too)
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+# additional way to navigate through windows
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-setw -g mode-mouse off
-set -g default-terminal "screen-256color"
-
-
-# colors
-set -g status-left ''
-set -g status-right ''
-set -g status-fg white
-set -g status-bg black
-
-# active window styling
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
-
-# make the active pane more apparent
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
-
-
-# customize the command line
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-
-# customize the status bar
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-right "#[fg=cyan]%d %b %R"
-
-set -g status-utf8 on
-
-# center the window list
-set -g status-justify centre
-
-# add a visual notification when something happens in a window
-setw -g monitor-activity on
-set -g visual-activity on
-
 # move to last window quickly
 bind-key C-b last-window
-
-# scrollback buffer size increase
-set -g history-limit 500000
+ 
+# No delay for escape key press
+set -sg escape-time 0
+ 
+# Reload tmux config
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+ 
+# THEME
+set -g status-bg black
+set -g status-fg white
+set -g window-status-current-bg white
+set -g window-status-current-fg black
+set -g window-status-current-attr bold
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-left '#[fg=green](#S) #(whoami)'
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 
 # set up copy and paste from within tmux windows
 unbind [
