Retain colorscheme in VIM when running inside of tmux
http://stackoverflow.com/a/10264470/126688

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,7 @@ set -g status-utf8 on
 set-window-option -g automatic-rename on
 set-option -g set-titles on
  
-#set -g default-terminal screen-256color
+set -g default-terminal screen-256color
 set -g status-keys vi
 set -g history-limit 10000
  
