Add copy and paste instructions for keyboard and mouse in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -82,10 +82,21 @@ set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)'
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 
-# set up copy and paste from within tmux windows
+
+# instructions from thoughtbot on copy-and-paste in tmux OS X http://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
+# these instructions are for copy-and-pasting in copy-mode with the keyboard
 unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# to copy-and-paste with the mouse, in iTerm2, hold "option" while making a selection
+# then "command-v" can be used to copy text, like normal
+# http://stackoverflow.com/a/19843650/126688
+
