--- a/tmux.conf
+++ b/tmux.conf
@@ -61,8 +61,9 @@ bind -n S-Right next-window
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
+# REMOVED for now since this conflicts with buffer navigation in vim
 # move to last window quickly
-bind-key C-b last-window
+# bind-key C-b last-window
  
 # No delay for escape key press
 set -sg escape-time 0
