change git branch color to orange, more legible on black

--- a/bash/config
+++ b/bash/config
@@ -1,18 +1,5 @@
 # depends on having the git completion script installed and available
-green=$(tput setaf 2)
-blue=$(tput setaf 4)
-bold=$(tput bold)
-red=$(tput setaf 1)
-reset=$(tput sgr0)
 
-PS1='\w\[$blue\]$(__git_ps1)\[$reset\] \$ '
+PS1='\w\[$ORANGE\]$(__git_ps1)\[$reset\] \$ '
 
 export EDITOR="vim"
-
-
-
-
-
-
-
-
