Trying out a tmux config option to end a stuck SSH session

--- a/tmux.conf
+++ b/tmux.conf
@@ -98,3 +98,5 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 # then "command-v" can be used to copy text, like normal
 # http://stackoverflow.com/a/19843650/126688
 
+# http://stackoverflow.com/a/25393402/126688
+bind t send-keys "C-m" "~."
