--- a/tmux.conf
+++ b/tmux.conf
@@ -99,4 +99,4 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 # http://stackoverflow.com/a/19843650/126688
 
 # http://stackoverflow.com/a/25393402/126688
-bind t send-keys "C-m" "~."
+bind h send-keys "C-m" "~."
