Ruined everything - so updating
For tmux, now 2.1, need to add a plugin installed via tmux plugin
manager, to restore the pre 2.1 scrolling behavior with the mouse

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,8 +15,9 @@ setw -g mode-keys vi
 # turn mouse on, this is better for scrolling
 # can still enter "copy mode" with prefix-[ (re-mapped as prefix-Esc) 
 # and then scroll up and down with shift j/k
-setw -g mode-mouse on
-setw -g monitor-activity on
+# 2.1 tmux changed the behavior of mouse scrolling
+set -g mouse on
+set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 
 # multiple ways to split a window, either "|" or "v" for vertical, or "-" or "s" for horizontal
 bind-key v split-window -h
