tmux system clipboard copy and paste

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,8 +2,6 @@
 set -g base-index 1
 set-window-option -g pane-base-index 1
 
-set -g status-utf8 on
-
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
@@ -74,9 +72,6 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # THEME
 set -g status-bg black
 set -g status-fg white
-set -g window-status-current-bg white
-set -g window-status-current-fg black
-set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)'
@@ -88,19 +83,23 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# https://www.joshmcarthur.com/til/2019/06/04/tmux-system-clipboard-copy-paste-on-mac-os.html
+# Setup 'v' to begin selection as in Vim
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+
 
 # to copy-and-paste with the mouse, in iTerm2, hold "option" while making a selection
 # then "command-v" can be used to copy text, like normal
 # http://stackoverflow.com/a/19843650/126688
 
 # http://stackoverflow.com/a/25393402/126688
-bind h send-keys "C-m" "~."
+#bind h send-keys "C-m" "~."
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
